# src/main/resources/api.yml
@@ -44,7 +44,7 @@ paths:
           format: int32
       responses:
         '200':
-          description: pet response
+          description: succsess tank response
           schema:
             type: array
             items:
@@ -90,19 +90,12 @@ paths:
           description: server error
           schema:
             $ref: '#/definitions/errorModel'
-  /tank/{tankId}:
+  /tank/current:
     get:
       description: Returns a tank
-      operationId: findTankById
+      operationId: findCurrentTank
       produces:
         - application/json
-      parameters:
-        - name: tankId
-          in: path
-          description: ID of tank to fetch
-          required: true
-          type: integer
-          format: int64
       responses:
         '200':
           description: succsess tank response
@@ -120,3 +113,58 @@ paths:
           description: server error
           schema:
             $ref: '#/definitions/errorModel'
+  /tank/max:
+    get:
+      description: Returns a tank
+      operationId: findMaxTankCapacity
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: succsess tank response
+          schema:
+            $ref: '#/definitions/tank'
+        400:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/errorModel'
+        401:
+          description: authorization error
+          schema:
+            $ref: '#/definitions/errorModel'
+        500:
+          description: server error
+          schema:
+            $ref: '#/definitions/errorModel'
+  /tank/{capacity}:
+    put:
+      description: Returns a tank
+      operationId: updateTankCapacity
+      produces:
+        - application/json
+      parameters:
+        - name: capacity
+          in: path
+          description: ID of tank to fetch
+          required: true
+          type: integer
+          format: int32
+      responses:
+        '200':
+          description: succsess tank response
+          schema:
+            $ref: '#/definitions/tank'
+        400:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/errorModel'
+        401:
+          description: authorization error
+          schema:
+            $ref: '#/definitions/errorModel'
+        500:
+          description: server error
+          schema:
+            $ref: '#/definitions/errorModel'
+
+
